feat: get score and feedback from pronunciation server

--- a/frontEndCaptini/src/app/modules/general/components/header/header.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-5">
-        <a class="navbar-brand logo" routerLink="/"> </a>
+        <a class="navbar-brand logo" routerLink="/topics"> </a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="navbar-collapse collapse mt-xs-24" id="navbarSupportedContent">
             <div class="float-start d-inline-flex">
