Fix translation service

--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson.component.html
@@ -34,7 +34,7 @@
       <li>
         <form class="form-inline mt-xs-4">
           <input
-            class="form-control mr-sm-2"
+            class="form-control mr-sm-2 search-input"
             type="search"
             placeholder="{{ 'topic.searchLesson' | translate }}"
             aria-label="Search"
