--- a/frontEndCaptini/src/app/modules/general/components/topics/topics.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/topics.component.html
@@ -13,7 +13,7 @@
       <li>
         <form class="form-inline mt-xs-2">
           <input
-            class="form-control mr-sm-2"
+            class="form-control mr-sm-2 search-input"
             type="search"
             placeholder="{{ 'topic.searchTopic' | translate }}"
             aria-label="Search"
