--- a/frontEndCaptini/src/app/modules/general/components/reference/reference.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/reference/reference.component.html
@@ -3,28 +3,20 @@
         <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-review" role="tabpanel" aria-labelledby="pills-review-tab">
                 <ul class="list-group">
-                    <li class="list-group-item d-flex justify-content-between align-items-center with-arrow">
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
                         <div class="item-content">
                             <div class="item-content d-flex flex-column">
-                                <a href="https://captini.tullius.dev/index" target="_blank">First reference</a>
+                                <span>[1] Sérhljóð. (2023, September 16). In Wikipedia. <a href="https://is.wikipedia.org/wiki/S%C3%A9rhlj%C3%B3%C3%B0" target="_blank">https://is.wikipedia.org/wiki/S%C3%A9rhlj%C3%B3%C3%B0</a> (retrieved 12.02.2024). CC BY-SA 3.0 unported. Modified to black and white and added reference marks.</span>
+                            </div>                            
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <div class="item-content">
+                            <div class="item-content d-flex flex-column">
+                                <span>[2] Samhljóð. (2022, May 11). In Wikipedia. <a href="https://is.wikipedia.org/wiki/Samhlj%C3%B3%C3%B0" target="_blank">https://is.wikipedia.org/wiki/Samhlj%C3%B3%C3%B0</a>(retrieved 12.02.2024). CC BY-SA 3.0 unported. Modified to black and white and added reference marks.</span>
                             </div>
                         </div>
                     </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center with-arrow">
-                        <div class="item-content">
-                            <div class="item-content d-flex flex-column">
-                                <a href="https://captini.tullius.dev/index" target="_blank">Second reference</a>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center with-arrow">
-                        <div class="item-content">
-                            <div class="item-content d-flex flex-column">
-                                <a href="https://captini.tullius.dev/index" target="_blank">Third reference</a>
-                            </div>
-                        </div>
-                    </li>
-                    
                 </ul>
             </div>
         </div>
