--- a/frontEndCaptini/src/app/modules/general/components/topics/topics.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/topics.component.html
@@ -31,9 +31,8 @@
           *ngFor="let topic of listtopics; let i = index"
           (click)="goToLessons(topic)"
         >
-          <div class="card-body bg-yellow">
-            <div class="number">Abc</div>
-          </div>
+        <div class="card-body" style="background-image: url('{{ topic.photo }}'); background-size: 100% 100%; background-position: left;height: 40px;"></div>
+
           <div class="progress" style="height: 10px;">
             <div class="progress-bar progress-bar-striped bg-success" role="progressbar" [style.width.%]="(100*listtopicsstatistics[0][i][1])" aria-valuenow="100*listtopicsstatistics[0][i][1]" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
