fix: added the references for the new images used

--- a/frontEndCaptini/src/app/modules/general/components/reference/reference.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/reference/reference.component.html
@@ -17,6 +17,20 @@
                             </div>
                         </div>
                     </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <div class="item-content">
+                            <div class="item-content d-flex flex-column">
+                                <span>[3] Idealistic tongue positions of cardinal front vowels with highest point indicated. (2008, February 11). In Wikipedia. <a href="https://en.wikipedia.org/wiki/Vowel#/media/File:Cardinal_vowel_tongue_position-front.svg" target="_blank">https://en.wikipedia.org/wiki/Vowel#/media/File:Cardinal_vowel_tongue_position-front.svg</a>(retrieved 05.03.2024). CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=3539944. Modified to black and white and added a reference </span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <div class="item-content">
+                            <div class="item-content d-flex flex-column">
+                                <span>[4] File:IPA-euler-manners-features.svg. (2022, May 31). In Wikipedia. <a href="https://en.wikipedia.org/wiki/File:IPA-euler-manners-features.svg" target="_blank">https://en.wikipedia.org/wiki/File:IPA-euler-manners-features.svg</a>(retrieved 05.03.2024). Creative Commons Attribution-Share Alike 4.0 International. Modified to black and white, added white background and added a reference mark.</span>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
