feat: Captini front updates - changed the logo. - fixed the reference page to be mobile responsive. - removed the review and community from the header.

--- a/frontEndCaptini/src/app/modules/general/components/reference/reference.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/reference/reference.component.html
@@ -3,31 +3,31 @@
         <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-review" role="tabpanel" aria-labelledby="pills-review-tab">
                 <ul class="list-group">
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <li class="list-group-item d-flex community-feedback">
                         <div class="item-content">
                             <div class="item-content d-flex flex-column">
-                                <span>[1] Sérhljóð. (2023, September 16). In Wikipedia. <a href="https://is.wikipedia.org/wiki/S%C3%A9rhlj%C3%B3%C3%B0" target="_blank">https://is.wikipedia.org/wiki/S%C3%A9rhlj%C3%B3%C3%B0</a> (retrieved 12.02.2024). CC BY-SA 3.0 unported. Modified to black and white and added reference marks.</span>
+                                <span>[1] Sérhljóð. (2023, September 16). In Wikipedia. <a href="https://is.wikipedia.org/wiki/S%C3%A9rhlj%C3%B3%C3%B0" target="_blank">https://is.wikipedia.org/wiki/S%C3%A9rhlj%C3%B3%C3%B0</a><br> (retrieved 12.02.2024). CC BY-SA 3.0 unported. Modified to black and white and added reference marks.</span>
                             </div>                            
                         </div>
                     </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <li class="list-group-item d-flex community-feedback">
                         <div class="item-content">
                             <div class="item-content d-flex flex-column">
-                                <span>[2] Samhljóð. (2022, May 11). In Wikipedia. <a href="https://is.wikipedia.org/wiki/Samhlj%C3%B3%C3%B0" target="_blank">https://is.wikipedia.org/wiki/Samhlj%C3%B3%C3%B0</a>(retrieved 12.02.2024). CC BY-SA 3.0 unported. Modified to black and white and added reference marks.</span>
+                                <span>[2] Samhljóð. (2022, May 11). In Wikipedia. <a href="https://is.wikipedia.org/wiki/Samhlj%C3%B3%C3%B0" target="_blank">https://is.wikipedia.org/wiki/Samhlj%C3%B3%C3%B0</a> <br>(retrieved 12.02.2024). CC BY-SA 3.0 unported. Modified to black and white and added reference marks.</span>
                             </div>
                         </div>
                     </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <li class="list-group-item d-flex community-feedback">
                         <div class="item-content">
                             <div class="item-content d-flex flex-column">
-                                <span>[3] Idealistic tongue positions of cardinal front vowels with highest point indicated. (2008, February 11). In Wikipedia. <a href="https://en.wikipedia.org/wiki/Vowel#/media/File:Cardinal_vowel_tongue_position-front.svg" target="_blank">https://en.wikipedia.org/wiki/Vowel#/media/File:Cardinal_vowel_tongue_position-front.svg</a>(retrieved 05.03.2024). CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=3539944. Modified to black and white and added a reference </span>
+                                <span>[3] Idealistic tongue positions of cardinal front vowels with highest point indicated. (2008, February 11). In Wikipedia. <a href="https://en.wikipedia.org/wiki/Vowel#/media/File:Cardinal_vowel_tongue_position-front.svg" target="_blank">https://en.wikipedia.org/wiki/Vowel#/media/File:Cardinal_vowel_tongue_position-front.svg</a><br>(retrieved 05.03.2024). CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=3539944. Modified to black and white and added a reference </span>
                             </div>
                         </div>
                     </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <li class="list-group-item d-flex community-feedback">
                         <div class="item-content">
                             <div class="item-content d-flex flex-column">
-                                <span>[4] File:IPA-euler-manners-features.svg. (2022, May 31). In Wikipedia. <a href="https://en.wikipedia.org/wiki/File:IPA-euler-manners-features.svg" target="_blank">https://en.wikipedia.org/wiki/File:IPA-euler-manners-features.svg</a>(retrieved 05.03.2024). Creative Commons Attribution-Share Alike 4.0 International. Modified to black and white, added white background and added a reference mark.</span>
+                                <span>[4] File:IPA-euler-manners-features.svg. (2022, May 31). In Wikipedia. <a href="https://en.wikipedia.org/wiki/File:IPA-euler-manners-features.svg" target="_blank">https://en.wikipedia.org/wiki/File:IPA-euler-manners-features.svg</a><br>(retrieved 05.03.2024). Creative Commons Attribution-Share Alike 4.0 International. Modified to black and white, added white background and added a reference mark.</span>
                             </div>
                         </div>
                     </li>
