--- a/frontEndCaptini/src/app/modules/general/components/header/header.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/header/header.component.html
@@ -7,8 +7,8 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" routerLink="/topics">{{'header.lessons' | translate}}</a></li>
                     <li class="nav-item"><a class="nav-link" routerLink="/">{{'header.leaderBoard' | translate}}</a></li>
-                    <li class="nav-item"><a class="nav-link" routerLink="/review">{{'header.review' | translate}}</a></li>
-                    <li class="nav-item"><a class="nav-link" routerLink="/community">{{'header.community' | translate}}</a></li>
+                    <!--<li class="nav-item"><a class="nav-link" routerLink="/review">{{'header.review' | translate}}</a></li>-->
+                    <!--<li class="nav-item"><a class="nav-link" routerLink="/community">{{'header.community' | translate}}</a></li>-->
                     <li class="nav-item"><a class="nav-link" routerLink="/references">{{'header.reference' | translate}}</a></li>
                 </ul>
             </div>
