--- a/frontEndCaptini/src/assets/css/custom.css
+++ b/frontEndCaptini/src/assets/css/custom.css
@@ -312,7 +312,7 @@ section {
 
 .list-group .list-group-item {
   margin-bottom: 1rem;
-  height: 64px;
+  height: auto;
   border-radius: 4px;
   box-shadow: 0px 2px 15px rgba(33, 33, 52, 0.1);
 }
