--- a/frontEndCaptini/src/styles.css
+++ b/frontEndCaptini/src/styles.css
@@ -4295,8 +4295,8 @@ fieldset:disabled .btn {
 
 .navbar-brand.logo {
   width: 154px;
-  height: 40px;
-  background-image: url(../src/assets/image/logo.svg);
+  height: 50px;
+  background-image: url(../src/assets/image/icon/logo.svg);
   background-repeat: no-repeat;
 }
 
