--- a/frontEndCaptini/src/app/Auth/reset-password/reset-sucess/reset-sucess.component.html
+++ b/frontEndCaptini/src/app/Auth/reset-password/reset-sucess/reset-sucess.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex  sign-in-body">
 <div class="form-signin">
     <div class="mb-5 text-center">
-        <img src="../../../assets/image/logo.svg" style="width: 250px;">
+        <img src="../../../assets/image/icon/logo.svg" style="width: 250px;">
     </div>
     <div class="pb-3">
 
