fix: changed the logo

--- a/frontEndCaptini/src/app/Auth/register/register.component.html
+++ b/frontEndCaptini/src/app/Auth/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex  sign-in-body">
     <div class="form-signin">
         <div class="mb-2 text-center">
-            <img src="../../../assets/image/icon/logo.svg" style="width: 250px;">
+            <img src="../../../assets/image/logoIcl.png" style="width: 250px;">
         </div>
         <div class="pb-1">
             <label>{{ 'register.get-board' | translate }}</label>
