feat: - set the new secondary feedback icon - upadte in authentication pages

--- a/frontEndCaptini/src/assets/css/custom.css
+++ b/frontEndCaptini/src/assets/css/custom.css
@@ -1,6 +1,6 @@
 body.teacher-bird::after {
   content: "";
-  background-image: url(../../assets/image/icon/bird.svg);
+  background-image: url(../../assets/image/illustration.svg);
   position: fixed;
   bottom: 0;
   width: 166px;
