fix: logo updated

--- a/frontEndCaptini/src/app/Auth/activate-account/activate-account.component.html
+++ b/frontEndCaptini/src/app/Auth/activate-account/activate-account.component.html
@@ -1,6 +1,6 @@
 <div class="form-signin ">
     <div class="mb-5 text-center">
-        <img src="../../../assets/image/logoIcl.png" style="width: 250px;">
+        <img src="../../../assets/image/logo.png" style="width: 250px;">
     </div>
     <div class="pb-3">
         <label>{{'activateAccount.activationMessage1' | translate}}</label>
